
===========
Changes log  
===========


@version-full@ (@release-date@)
[Bugs fixed]
 - Potential NPE in REST book example (ch7, UserResource). Reported by Marc Portier.
 - Potential NPE during KeyStore initialization for Simple HTTPS connector. Report by Quintin May.
 
[Enhancements] 
 - Clarified the Javadocs for the Variant's "identifier" property. Reported by Joe Holloway.

1.0.4 (2007-07-25)
[Bugs fixed]
 - Fixed spacing issue in HTTP reading/writing code (NRE's HttpUtils class). Reported by Ilya Klyuchnikov.
 - Fixed bug in StreamClientCall causing the response's status to always be null. Reported by Ilya Klyuchnikov.
 - Fixed issue that makes the server to return a 304 status even if the resource is modified 
   (the "if-none-match" condition was badly implemented). Reported by Vladimir Djurovic and Adam Taft.
 - Fixed closing issue in internal HTTP server causing the browser to hang on requests. Reported by Serge.
 - Reverted changes to the ServerServlet back to the 1.0.2 behavior (application context set after construction 
   via setContext() method). The new behavior requires NRE API changes and will only be available in the 
   Restlet 1.1. Issue reported by Richard Wallace. 
 - Restlet.getContext() now always return a non-null context.
 - ServerList.addServer(Server), returned by the Component.getServers() method, wasn't properly setting the 
   component as the server's target.
 - Fixed potential NPE in DirectoryResource when no request's baseRef was set. Reported by Joe Holloway.
 - Fixed issue detected when Directory are based on a symbolic link since the directory path was mistakenly 
   resolved due to the usage of the getCanonicalPath() method instead of getAbsolutePath() in class 
   LocalReference. Reported and corrected by Marc Portier.

[Enhancements] 
 - Mentionned the additional dependency on the cglib in the SpringRouter class.
 - Clarified and fixed SpringContext Javadocs.
 - Upgraded Jetty to version 6.1.5.
 
1.0.3 (2007-07-15)